# frequency-spectrographical-visualiser

./: .gitignore  README.md
PID/: README.md  sdkconfig.defaults.esp32s3
PID/main/: CMakeLists.txt  main.c  pid_controller.c  pid_controller.h
PID_with_music/: CMakeLists.txt  sdkconfig.defaults
PID_with_music/main/: CMakeLists.txt  main.c  pid_controller.c
SD_card/: CMakeLists.txt
Scherm/: .gitignore  sdkconfig.old
Scherm/main/: CMakeLists.txt  espnow_protocol.h  espnow_transport.h  lv_conf.h  lvgl_use.c  lvgl_use.h  main.c  now_playing_ui.c  now_playing_ui.h  playback_controls_ui.c  playback_controls_ui.h  settings.h  volume_ui.h
TOF/: CMakeLists.txt  README.md
TOF/main/: CMakeLists.txt  calibrate_single_vl6180.c  main.c  probe.c
cli-base/: CMakeLists.txt
components/pca9548a/: CMakeLists.txt
fan_1/: .gitignore  2.txt  CMakeLists.txt  sdkconfig  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32c61  sdkconfig.defaults.esp32h2  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s2
fan_1/main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/: CMakeLists.txt  main.c
mp3-from-sd-and-bands-integration/: sdkconfig  sdkconfig.old
mp3-from-sd-and-bands-integration/main/: CMakeLists.txt  audio_control.c  audio_control.h  cli_control.c  cli_control.h  console.c  console.h  espnow_protocol.h  fan_control.c  fan_control.h  main.c  pid_controller.c  priorities.h  sd_card.c  visualizer.c  visualizer.h
mp3_converter/: mp3_converter.ino
mp3_to_fan_esp/: CMakeLists.txt
mp3_to_fan_esp/sdcard/: SONG1.TXT
poging3000/: CMakeLists.txt  sdkconfig.defaults
poging3001/: partitions.csv
refactored/: CMakeLists.txt
refactored-audio-player/: CMakeLists.txt  Makefile  partitions_example.csv  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old
refactored-screen/: CMakeLists.txt  sdkconfig
refactored-screen/main/: CMakeLists.txt  espnow_protocol.h  espnow_transport.c  idf_component.yml  lvgl_use.c  now_playing_ui.c  now_playing_ui.h  playback_controls_ui.c  playback_controls_ui.h  settings.h  volume_ui.c
sdcard_mp3/: CMakeLists.txt
sdcard_remounting/: CMakeLists.txt  sdkconfig
(+51 files in other folders)
