idf_component_register(SRCS "console.c" "main.c" 
                            "visualizer.c" 
                            "audio_control.c" 
                            "cli_control.c"
                            "console.c"
                            "console_settings.c"
                       INCLUDE_DIRS "."
                       )