idf_component_register(SRCS "main.c" "espnow_transport.c" "console.c" 
                            "visualizer.c" 
                            "audio_control.c" 
                            "espnow_transport.c"
                            "console.c"
                            "console_settings.c"
                       INCLUDE_DIRS "."
                       )